# blog_agency

./: .env.example  .gitignore  README.md  chat_agency.py  pyproject.toml
.devcontainer/: devcontainer.json
research_flow/: pyproject.toml  requirements.txt
research_flow/src/research_flow/: config.py  main.py
research_flow/src/research_flow/crews/define_crew/: README.md  pyproject.toml
research_flow/src/research_flow/crews/define_crew/src/define_crew/: crew.py  main.py
research_flow/src/research_flow/crews/define_crew/src/define_crew/config/: agents.yaml  tasks.yaml
research_flow/src/research_flow/crews/research_crew/: pyproject.toml
research_flow/src/research_flow/crews/research_crew/src/research_crew/: crew.py  main.py
research_flow/src/research_flow/crews/research_crew/src/research_crew/config/: agents.yaml  tasks.yaml
