[project]
name = "codecycle-blog-agency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.100.1",
    "langtrace-python-sdk>=3.5.1",
    "pip>=25.0",
]

[project.scripts]
kickoff = "research_flow.src.research_flow.main:kickoff"
