[project]
name = "research_flow"
version = "0.1.0"
description = "research_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "langtrace-python-sdk=3.5.1"
]

[project.scripts]
kickoff = "research_flow.main:kickoff"
plot = "research_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
